--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -y -qq python dh-autoreconf build-essential
+- sudo apt-get install -y -qq python dh-autoreconf squashfs-tools build-essential
 
 env:
 - VER=2.4.1
